--- a/docs/modules/ROOT/pages/reference/extensions/cxf-soap.adoc
+++ b/docs/modules/ROOT/pages/reference/extensions/cxf-soap.adoc
@@ -293,3 +293,12 @@ TIP: Both {project-name} and Quarkus CXF contain a number of
 
 IMPORTANT: For `wsdl2Java` to work properly, your application will have to directly depend on `io.quarkiverse.cxf:quarkus-cxf`.
 
+TIP: While `wsdlvalidator` is not supported, you can use `wsdl2Java` with the following configuration in `application.properties`
+     to validate your WSDLs:
++
+.application.properties
+[source,properties]
+----
+quarkus.cxf.codegen.wsdl2java.additional-params = -validate
+----
+
