--- a/docs/modules/ROOT/pages/reference/extensions/snmp.adoc
+++ b/docs/modules/ROOT/pages/reference/extensions/snmp.adoc
@@ -53,3 +53,8 @@ The motivation for this change is twofold:
 
 This change has no impact on configuration of the SNMP component.
 
+[id="extensions-snmp-limitations-snmp-v3"]
+=== SNMP v3
+
+SNMP with version 3 is supported only for the operation `poll`. (Limitation is caused by the issue in Camel 3.18.6 - see the https://issues.apache.org/jira/browse/CAMEL-19298[ticket])
+
