Micrometer: SimpleMeterRegistry is not created if no other registry is defined #5023

--- a/docs/modules/ROOT/pages/reference/extensions/micrometer.adoc
+++ b/docs/modules/ROOT/pages/reference/extensions/micrometer.adoc
@@ -58,6 +58,8 @@ Your application should declare the following dependency or  one of the dependen
 </dependency>
 ----
 
+If no dependency is declared, the Micrometer extension creates a SimpleMeterRegistry instance, suitable mainly for testing.
+
 
 [id="extensions-micrometer-camel-quarkus-limitations"]
 == Camel Quarkus limitations
