--- a/docs/modules/ROOT/pages/reference/extensions/google-storage.adoc
+++ b/docs/modules/ROOT/pages/reference/extensions/google-storage.adoc
@@ -44,6 +44,18 @@ ifeval::[{doc-show-user-guide-link} == true]
 Check the xref:user-guide/index.adoc[User guide] for more information about writing Camel Quarkus applications.
 endif::[]
 
+[id="extensions-google-storage-camel-quarkus-limitations"]
+== Camel Quarkus limitations
+
+Currently it needs a work around in native building to introduce a native-image.properties file containing the following line:
+[source,properties]
+----
+Args = -H:+RunReachabilityHandlersConcurrently
+----
+
+Also this file needs to be in your application, e.g. `src/main/resources/META-INF/native-image/native-image.properties`
+
+
 [id="extensions-google-storage-ssl-in-native-mode"]
 == SSL in native mode
 
