--- a/docs/modules/ROOT/pages/reference/extensions/management.adoc
+++ b/docs/modules/ROOT/pages/reference/extensions/management.adoc
@@ -4,23 +4,27 @@
 = Management
 :linkattrs:
 :cq-artifact-id: camel-quarkus-management
-:cq-native-supported: false
-:cq-status: Preview
-:cq-status-deprecation: Preview
+:cq-native-supported: true
+:cq-status: Stable
+:cq-status-deprecation: Stable
 :cq-description: JMX management strategy and associated managed resources.
 :cq-deprecated: false
 :cq-jvm-since: 1.1.0
-:cq-native-since: n/a
+:cq-native-since: 3.0.0
 
 ifeval::[{doc-show-badges} == true]
 [.badges]
-[.badge-key]##JVM since##[.badge-supported]##1.1.0## [.badge-key]##Native##[.badge-unsupported]##unsupported##
+[.badge-key]##JVM since##[.badge-supported]##1.1.0## [.badge-key]##Native since##[.badge-supported]##3.0.0##
 endif::[]
 
 JMX management strategy and associated managed resources.
 
 [id="extensions-management-maven-coordinates"]
 == Maven coordinates
+
+https://{link-quarkus-code-generator}/?extension-search=camel-quarkus-management[Create a new project with this extension on {link-quarkus-code-generator}, window="_blank"]
+
+Or add the coordinates to your existing project:
 
 [source,xml]
 ----
@@ -46,10 +50,16 @@ JMX can be enabled or disabled in Camel-Quarkus by any of the following methods:
 . Setting the `camel.main.jmxEnabled` configuration property to a boolean value.
 . Setting the system property `-Dorg.apache.camel.jmx.disabled` to a boolean value.
 
+[id="extensions-management-usage-native-mode"]
+=== Native mode
 
-[id="extensions-management-camel-quarkus-limitations"]
-== Camel Quarkus limitations
+**Experimental** JMX support was added for native executables in GraalVM for JDK 17/20 / Mandrel 23.0. You can enable this feature by
+adding the following configuration property to `application.properties`.
 
-The JMX management beans exposed by this extension will not work in native mode, as GraalVM has no support for JMX. Therefore, attempting to build a native
-image with this extension on the classpath will result in a build failure.
+[source,properties]
+----
+quarkus.native.monitoring=jmxserver
+----
+
+For more information, refer to the https://quarkus.io/guides/building-native-image#using-monitoring-options[Quarkus native guide].
 
