--- a/docs/modules/ROOT/nav.adoc
+++ b/docs/modules/ROOT/nav.adoc
@@ -50,6 +50,7 @@
 *** xref:reference/extensions/aws2-translate.adoc[AWS 2 Translate]
 *** xref:reference/extensions/aws-secrets-manager.adoc[AWS Secrets Manager]
 *** xref:reference/extensions/aws-xray.adoc[AWS XRay]
+*** xref:reference/extensions/activemq.adoc[ActiveMQ]
 *** xref:reference/extensions/arangodb.adoc[ArangoDb]
 *** xref:reference/extensions/asterisk.adoc[Asterisk]
 *** xref:reference/extensions/atlasmap.adoc[AtlasMap]
