--- a/docs/modules/ROOT/pages/reference/extensions/grpc.adoc
+++ b/docs/modules/ROOT/pages/reference/extensions/grpc.adoc
@@ -50,47 +50,24 @@ endif::[]
 [id="extensions-grpc-usage-protobuf-generated-code"]
 === Protobuf generated code
 
-You can https://github.com/grpc/grpc-java#generated-code[generate] gRPC service stubs with protobuf.
-
-[id="extensions-grpc-usage-protobuf-maven-plugin"]
-==== protobuf-maven-plugin
-
-The `protobuf-maven-plugin` can generate service stubs for `.proto` files. Below is an example configuration for Maven.
+Camel Quarkus gRPC can generate gRPC service stubs for `.proto` files. When using Maven, ensure that you have
+enabled the `generate-code` goals of the `quarkus-maven-plugin` in your project build.
 
 [source,xml]
 ----
 <build>
-    <extensions>
-        <extension>
-            <groupId>kr.motd.maven</groupId>
-            <artifactId>os-maven-plugin</artifactId>
-            <version>{os-maven-plugin-version}</version>
-        </extension>
-    </extensions>
-
     <plugins>
         <plugin>
-            <groupId>org.xolstice.maven.plugins</groupId>
-            <artifactId>protobuf-maven-plugin</artifactId>
-            <version>{protobuf-maven-plugin-version}</version>
-            <configuration>
-                <protocArtifact>com.google.protobuf:protoc:${protoc.version}:exe:${os.detected.classifier}</protocArtifact>
-                <pluginId>grpc-java</pluginId>
-                <pluginArtifact>io.grpc:protoc-gen-grpc-java:${grpc.version}:exe:${os.detected.classifier}</pluginArtifact>
-            </configuration>
+            <groupId>io.quarkus</groupId>
+            <artifactId>quarkus-maven-plugin</artifactId>
+            <version>${quarkus.platform.version}</version>
+            <extensions>true</extensions>
             <executions>
                 <execution>
-                    <id>compile</id>
                     <goals>
-                        <goal>compile</goal>
-                        <goal>compile-custom</goal>
-                    </goals>
-                </execution>
-                <execution>
-                    <id>test-compile</id>
-                    <goals>
-                        <goal>test-compile</goal>
-                        <goal>test-compile-custom</goal>
+                        <goal>build</goal>
+                        <goal>generate-code</goal>
+                        <goal>generate-code-tests</goal>
                     </goals>
                 </execution>
             </executions>
@@ -99,24 +76,49 @@ The `protobuf-maven-plugin` can generate service stubs for `.proto` files. Below
 </build>
 ----
 
-[id="extensions-grpc-usage-generated-code-limitations"]
-==== Generated code limitations
+With this configuration, you can put your service and message definitions into the `src/main/proto` directory and
+the `quarkus-maven-plugin` will generate code from your `.proto` files.
 
-A limitation of the generated code is that it is annotated with the non Jakarta EE 10 friendly `@javax.annotation.Generated`.
+[id="extensions-grpc-usage-scanning-proto-files-with-imports"]
+==== Scanning `proto` files with imports
 
-To avoid compilation issues, the `grpc-java` project recommendation is to add a `provided` scoped dependency like this:
+The Protocol Buffers specification provides a way to import proto files. You can control the scope of dependencies to
+scan by adding configuration property `quarkus.camel.grpc.codegen.scan-for-imports` property to `application.properties`.
+The available options are outlined below.
 
-[source,xml]
+* `all` - Scan all dependencies
+* `none` - Disable dependency scanning. Use only the proto definitions defined in `src/main/proto` or `src/test/proto`
+* `groupId1:artifactId1,groupId2:artifactId2` - Scan only the dependencies matching the `groupId` and `artifactId` list
+
+The default value is `com.google.protobuf:protobuf-java`.
+
+[id="extensions-grpc-usage-scanning-proto-files-from-dependencies"]
+==== Scanning `proto` files from dependencies
+
+If you have proto files shared across multiple dependencies, you can generate gRPC service stubs for them by adding
+configuration property `quarkus.camel.grpc.codegen.scan-for-proto` to `application.properties`.
+
+First add a dependency for the artifact(s) containing proto files to your project. Next, enable proto file
+dependency scanning.
+
+[source,properties]
 ----
-<dependency>
-    <groupId>org.apache.tomcat</groupId>
-    <artifactId>annotations-api</artifactId>
-    <version>6.0.53</version>
-    <scope>provided</scope>
-</dependency>
+quarkus.camel.grpc.codegen.scan-for-proto=org.my.groupId1:my-artifact-id-1,org.my.groupId2:my-artifact-id-2
 ----
 
-Alternatively, you can use Maven or Gradle plugins to iterate over the generated code (found at `target/generated-sources` for Maven) and replace all instances of `@javax.annotation.Generated` with `@jakarta.annotation.Generated`.
+It is possible to include / exclude specific proto files from dependency scanning via configuration properties.
+
+The configuration property name suffix is the Maven `groupId` / `artifactId` for the dependency to configure includes / excludes on.
+Paths are relative to the classpath location of the proto files within the dependency. Paths can be an explicit path to a proto file,
+or as glob patterns to include / exclude multiple files.
+
+[source,properties]
+----
+quarkus.camel.grpc.codegen.scan-for-proto-includes."<groupId>\:<artifactId>"=foo/**,bar/**,baz/a-proto.proto
+quarkus.camel.grpc.codegen.scan-for-proto-excludes."<groupId>\:<artifactId>"=foo/private/**,baz/another-proto.proto
+----
+
+NOTE: The `:` character within property keys must be escaped with `\`.
 
 [id="extensions-grpc-usage-accessing-classpath-resources-in-native-mode"]
 === Accessing classpath resources in native mode
@@ -148,4 +150,55 @@ More information about selecting resources for inclusion in the native executabl
 === Integration with Quarkus gRPC is not supported
 
 At present there is no support for integrating Camel Quarkus gRPC with Quarkus gRPC. If you have both the `camel-quarkus-grpc` and `quarkus-grpc` extension dependency on the classpath, you are likely to encounter problems at build time when compiling your application.
+
+
+[id="extensions-grpc-additional-camel-quarkus-configuration"]
+== Additional Camel Quarkus configuration
+
+[width="100%",cols="80,5,15",options="header"]
+|===
+| Configuration property | Type | Default
+
+
+|icon:lock[title=Fixed at build time] [[quarkus.camel.grpc.codegen.enabled]]`link:#quarkus.camel.grpc.codegen.enabled[quarkus.camel.grpc.codegen.enabled]`
+
+If `true`, Camel Quarkus gRPC code generation is run for .proto files discovered from the `proto` directory, or from dependencies specified in the `scan-for-proto` or `scan-for-imports` options. When `false`, code generation for .proto files is disabled.
+| `boolean`
+| `true`
+
+|icon:lock[title=Fixed at build time] [[quarkus.camel.grpc.codegen.scan-for-proto]]`link:#quarkus.camel.grpc.codegen.scan-for-proto[quarkus.camel.grpc.codegen.scan-for-proto]`
+
+Camel Quarkus gRPC code generation can scan application dependencies for .proto files to generate Java stubs from them. This property sets the scope of the dependencies to scan. Applicable values:
+
+ - _none_ - default - don't scan dependencies
+ - a comma separated list of _groupId:artifactId_ coordinates to scan
+ - _all_ - scan all dependencies
+| `string`
+| `none`
+
+|icon:lock[title=Fixed at build time] [[quarkus.camel.grpc.codegen.scan-for-imports]]`link:#quarkus.camel.grpc.codegen.scan-for-imports[quarkus.camel.grpc.codegen.scan-for-imports]`
+
+Camel Quarkus gRPC code generation can scan dependencies for .proto files that can be imported by protos in this applications. Applicable values:
+
+ - _none_ - default - don't scan dependencies
+ - a comma separated list of _groupId:artifactId_ coordinates to scan
+ - _all_ - scan all dependencies  The default is _com.google.protobuf:protobuf-java_.
+| `string`
+| `com.google.protobuf:protobuf-java`
+
+|icon:lock[title=Fixed at build time] [[quarkus.camel.grpc.codegen.scan-for-proto-includes]]`link:#quarkus.camel.grpc.codegen.scan-for-proto-includes[quarkus.camel.grpc.codegen.scan-for-proto-includes]`
+
+Package path or file glob pattern includes per dependency containing .proto files to be considered for inclusion.
+| ``Map<String,List<String>>``
+| 
+
+|icon:lock[title=Fixed at build time] [[quarkus.camel.grpc.codegen.scan-for-proto-excludes]]`link:#quarkus.camel.grpc.codegen.scan-for-proto-excludes[quarkus.camel.grpc.codegen.scan-for-proto-excludes]`
+
+Package path or file glob pattern includes per dependency containing .proto files to be considered for exclusion.
+| ``Map<String,List<String>>``
+| 
+|===
+
+[.configuration-legend]
+{doc-link-icon-lock}[title=Fixed at build time] Configuration property fixed at build time. All other configuration properties are overridable at runtime.
 
