--- a/docs/modules/ROOT/nav.adoc
+++ b/docs/modules/ROOT/nav.adoc
@@ -309,6 +309,7 @@
 *** xref:reference/extensions/xslt.adoc[XSLT]
 *** xref:reference/extensions/xslt-saxon.adoc[XSLT Saxon]
 *** xref:reference/extensions/yaml-dsl.adoc[YAML DSL]
+*** xref:reference/extensions/yaml-io.adoc[YAML IO]
 *** xref:reference/extensions/zendesk.adoc[Zendesk]
 *** xref:reference/extensions/zip-deflater.adoc[Zip Deflate Compression]
 *** xref:reference/extensions/zipfile.adoc[Zip File]
