--- a/docs/modules/ROOT/pages/reference/extensions/jms.adoc
+++ b/docs/modules/ROOT/pages/reference/extensions/jms.adoc
@@ -50,13 +50,13 @@ endif::[]
 [id="extensions-jms-usage-message-mapping-with-org-w3c-dom-node"]
 === Message mapping with `org.w3c.dom.Node`
 
-The Camel JMS component supports message mapping between `javax.jms.Message` and `org.apache.camel.Message`. When wanting to convert a Camel message body type of `org.w3c.dom.Node`, 
+The Camel JMS component supports message mapping between `jakarta.jms.Message` and `org.apache.camel.Message`. When wanting to convert a Camel message body type of `org.w3c.dom.Node`,
 you must ensure that the `camel-quarkus-xml-jaxp` extension is present on the classpath.
 
-[id="extensions-jms-usage-native-mode-support-for-javax-jms-objectmessage"]
-=== Native mode support for javax.jms.ObjectMessage
+[id="extensions-jms-usage-native-mode-support-for-jakarta-jms-objectmessage"]
+=== Native mode support for jakarta.jms.ObjectMessage
 
-When sending JMS message payloads as `javax.jms.ObjectMessage`, you must annotate the relevant classes to be registered for serialization with `@RegisterForReflection(serialization = true)`. 
+When sending JMS message payloads as `jakarta.jms.ObjectMessage`, you must annotate the relevant classes to be registered for serialization with `@RegisterForReflection(serialization = true)`.
 Note that this extension automatically sets `quarkus.camel.native.reflection.serialization-enabled = true` for you. Refer to the xref:user-guide/native-mode.adoc#serialization[native mode user guide] for more information.
 
 [id="extensions-jms-usage-support-for-connection-pooling-and-x-open-xa-distributed-transactions"]
